must-gather.local.7541592903822836477/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-ccdc0abcf68b276b781a774d7630503a6b323c7cedea8e5636b09dd759dd226a/namespaces/openshift-authentication/route.openshift.io/routes/oauth-openshift.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2024-06-11T11:07:09Z"
  labels:
    app: oauth-openshift
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:host: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: authentication-operator
    operation: Update
    time: "2024-06-11T11:07:09Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    subresource: status
    time: "2024-06-11T11:07:09Z"
  name: oauth-openshift
  namespace: openshift-authentication
  resourceVersion: "26731"
  uid: 4ab83ebe-3592-40e2-9e33-d72a6119c990
spec:
  host: oauth-openshift.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
  port:
    targetPort: 6443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: oauth-openshift
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2024-06-11T11:07:09Z"
      status: "True"
      type: Admitted
    host: oauth-openshift.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    routerName: default
    wildcardPolicy: None
